# compress_picture_to70

./: .agignore  README.md  agent-logs.md  compress_images.py  images_to_webp.py  main.py  pyproject.toml  utils.py
tests/: test_utils.py
